Table "migrations" {
  "id" "character varying(255)" [pk, not null]
}

Table "order_sequences" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "date" date [not null]
  "last_sequence" bigint [not null]
  "created_at" timestamp
  "updated_at" timestamp
  "deleted_at" timestamp

  Indexes {
    date [type: btree, unique, name: "idx_order_sequences_date"]
    deleted_at [type: btree, name: "idx_order_sequences_deleted_at"]
  }
}

Table "orders" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "user_id" uuid
  "grand_total" bigint [not null]
  "status" "character varying(20)" [default: `'draft'::charactervarying`]
  "order_number" "character varying(50)"

  Indexes {
    deleted_at [type: btree, name: "idx_orders_deleted_at"]
    grand_total [type: btree, name: "idx_orders_grand_total"]
    order_number [type: btree, unique, name: "idx_orders_order_number"]
    status [type: btree, name: "idx_orders_status"]
    user_id [type: btree, name: "idx_orders_user_id"]
  }
}

Table "products" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "name" text [not null]
  "description" text
  "slug" text
  "price" bigint [not null]
  "stock" bigint [default: 0]
  "unit" "character varying(10)"
  "is_active" boolean [default: true]
  "store_id" uuid

  Indexes {
    deleted_at [type: btree, name: "idx_products_deleted_at"]
    is_active [type: btree, name: "idx_products_is_active"]
    price [type: btree, name: "idx_products_price"]
    slug [type: btree, unique, name: "idx_products_slug"]
    stock [type: btree, name: "idx_products_stock"]
    store_id [type: btree, name: "idx_products_store_id"]
  }
}

Table "stores" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "name" text [unique, not null]
  "description" text
  "is_active" boolean [default: true]
  "user_id" uuid

  Indexes {
    deleted_at [type: btree, name: "idx_stores_deleted_at"]
    is_active [type: btree, name: "idx_stores_is_active"]
    user_id [type: btree, name: "idx_stores_user_id"]
  }
}

Table "users" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "created_at" timestamp
  "created_by" uuid
  "updated_at" timestamp
  "updated_by" uuid
  "deleted_at" timestamp
  "username" text [unique, not null]
  "email" text [unique, not null]
  "password" text [not null]
  "role" "character varying(20)" [default: `'buyer'::charactervarying`]
  "is_active" boolean [default: true]
  "picture" "character varying(500)"

  Indexes {
    deleted_at [type: btree, name: "idx_users_deleted_at"]
  }
}

Ref "fk_orders_user":"users"."id" < "orders"."user_id"

Ref "fk_products_store":"stores"."id" < "products"."store_id"

Ref "fk_stores_user":"users"."id" < "stores"."user_id"
